Trying to fix overflow problems

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;700&display=swap');
 
 .App {
-  overflow-x: scroll;
+  overflow: scroll;
   max-width: 100%;
 }
 
 .navbar {
   background-color: #C0DDE7;
   max-width: 100%;
-  overflow: scroll;
-  position: relative;
+  /* position: relative; */
 }
 
 .navbar-item:hover {
@@ -17,15 +16,15 @@
 }
 
 .navbar a {
-  font-size: 20px;
+  font-size: 18.5px;
   color: #3B6280;
   text-align: center;
   padding: 10px 16px;
   text-decoration: none;
 }
 
-#collasible-nav-dropdown {
-  margin-right: 4vh;
+#navbar_brand {
+  background-color: #C0DDE7;
 }
 
 .ArticleCarousel {
